Sampler name form cfg filename

--- a/Sampler/cfgs/examples/template.cfg
+++ b/Sampler/cfgs/examples/template.cfg
@@ -20,8 +20,9 @@ BLAS_NAME=
 #SYSTEM_NAME="local"
 
 # Name of the Sampler
+# (default: basename of the cfg file)
 #
-#NAME=#{SYSTEM_NAME}_${BLAS_NAME}
+#NAME=`basename $1 .cfg`
 
 # Number of cores
 #
