ncores and threads_per_core

--- a/Sampler/cfgs/examples/template.cfg
+++ b/Sampler/cfgs/examples/template.cfg
@@ -26,7 +26,11 @@ BLAS_NAME=
 
 # Number of cores
 #
-#NT_MAX=1
+#NCORES=1
+
+# Number of threads per core
+#
+#THREADS_PER_CORE=1
 
 # C compiler (default: "gcc")
 #
