gathercfg for mac

--- a/Sampler/cfgs/examples/template.cfg
+++ b/Sampler/cfgs/examples/template.cfg
@@ -123,9 +123,9 @@ BLAS_NAME=
 #
 CPU_MODEL=
 
-# CPU Frequency in MHz [GUI]
+# CPU Frequency in Hz [GUI]
 #
-FREQUENCY_MHZ=
+FREQUENCY_HZ=
 
 # Maximum number of double preicion floating point operations issued per cycle
 # [GUI]
