PAPI and OPENMP options simplified

--- a/Sampler/cfgs/examples/template.cfg
+++ b/Sampler/cfgs/examples/template.cfg
@@ -32,21 +32,21 @@ BLAS_NAME=
 #
 #THREADS_PER_CORE=1
 
-# C compiler (default: "gcc")
+# C compiler
 #
-#CC=
+#CC=gcc
 
-# C compiler flags (default: "")
+# C compiler flags
 #
-#CFLAGS=
+#CFLAGS=""
 
-# C++ compiler (default: "g++")
+# C++ compiler
 #
-#CXX=
+#CXX=g++
 
-# C++ compiler flags (default: "")
+# C++ compiler flags
 #
-#CXXFLAGS=
+#CXXFLAGS=""
 
 # Linker flags (e.g., "-lopenblas")
 #
@@ -66,12 +66,19 @@ BLAS_NAME=
 #KERNEL_HEADERS="headers/blas.h headers/lapack.h"
 
 
+# OPENMP
+
+# Enable support for OpenMP-based parallel regions
+#
+#OPENMP=1
+
+
 # PAPI
 
 # If PAPI is installed, the following information can be optained from
 # papi_avail.
 
-# Number of counters the CPU supports simmultaneously (default: 0)
+# Number of counters the CPU supports simmultaneously
 # 0: disable PAPI support entirely.
 # Listed as "Number Hardware Counters" in papi_avail
 #
