--- a/Sampler/cfgs/examples/template.cfg
+++ b/Sampler/cfgs/examples/template.cfg
@@ -38,7 +38,7 @@ BLAS_NAME=
 
 # C compiler flags
 #
-#CFLAGS=""
+#CFLAGS=
 
 # C++ compiler
 #
@@ -46,7 +46,7 @@ BLAS_NAME=
 
 # C++ compiler flags
 #
-#CXXFLAGS=""
+#CXXFLAGS=
 
 # Linker flags (e.g., "-lopenblas")
 #
@@ -106,7 +106,7 @@ BLAS_NAME=
 
 # Prefix immediately before the sampler invocation [GUI]
 # {nt} will be replaced by the number of threads.
-# e.g.: "OMP_NUM_THREADS={nt}"
+# e.g.: "OPENBLAS_NUM_THREADS={nt}"
 #
 #BACKEND_PREFIX=
 
