README and sampler interface documentation

--- a/Sampler/cfgs/examples/template.cfg
+++ b/Sampler/cfgs/examples/template.cfg
@@ -107,6 +107,8 @@ BLAS_NAME=
 # Prefix immediately before the sampler invocation [GUI]
 # {nt} will be replaced by the number of threads.
 # e.g.: "OPENBLAS_NUM_THREADS={nt}"
+# Avoid using the genertic OMP_NUM_THREADS, since this will conflict with the
+# OPENMP option.
 #
 #BACKEND_PREFIX=
 
