--- a/Sampler/cfgs/examples/Mac_Accelerate.cfg
+++ b/Sampler/cfgs/examples/Mac_Accelerate.cfg
@@ -8,9 +8,10 @@ KERNEL_HEADERS="headers/blas.h headers/lapack.h"
 
 BACKEND_PREFIX="VECLIB_MAXIMUM_THREADS={nt}"
 
-NCORES=2
-FREQUENCY_HZ=2000000000
-CPU_MODEL="Intel(R) Core(TM) i7-3667U CPU @ 2.00GHz"
-DFLOPS_PER_CYCLE=8
+. ./gathercfg.sh
+
+
+DFLOPS_PER_CYCLE=8  # SandyBridge
+#DFLOPS_PER_CYCLE=16  # Haswell
 
 # vim: set ft=sh
