set openmp flags in example

--- a/Sampler/cfgs/examples/Mac_Accelerate.cfg
+++ b/Sampler/cfgs/examples/Mac_Accelerate.cfg
@@ -3,6 +3,8 @@
 BLAS_NAME="Accelerate"
 SYSTEM_NAME="local"
 
+CFLAGS="-fopenmp"
+CXXFLAGS="-fopenmp"
 LINK_FLAGS="-framework Accelerate"
 KERNEL_HEADERS="headers/blas.h headers/lapack.h"
 
