hide gathercfg output

--- a/Sampler/cfgs/examples/Mac_Accelerate.cfg
+++ b/Sampler/cfgs/examples/Mac_Accelerate.cfg
@@ -10,7 +10,7 @@ KERNEL_HEADERS="headers/blas.h headers/lapack.h"
 
 BACKEND_PREFIX="VECLIB_MAXIMUM_THREADS={nt}"
 
-. ./gathercfg.sh
+. ./gathercfg.sh > /dev/null
 
 
 DFLOPS_PER_CYCLE=8  # SandyBridge
