default openmp flags

--- a/Sampler/cfgs/examples/Mac_Accelerate.cfg
+++ b/Sampler/cfgs/examples/Mac_Accelerate.cfg
@@ -1,10 +1,8 @@
 #!/bin/bash
 
 BLAS_NAME="Accelerate"
-SYSTEM_NAME="local"
+SYSTEM_NAME="Mac"
 
-CFLAGS="-fopenmp"
-CXXFLAGS="-fopenmp"
 LINK_FLAGS="-framework Accelerate"
 KERNEL_HEADERS="headers/blas.h headers/lapack.h"
 
