rearranging and documenting

--- a/Sampler/cfgs/examples/template.cfg
+++ b/Sampler/cfgs/examples/template.cfg
@@ -24,14 +24,6 @@ BLAS_NAME=
 #
 #NAME=`basename $1 .cfg`
 
-# Number of cores
-#
-#NCORES=1
-
-# Number of threads per core
-#
-#THREADS_PER_CORE=1
-
 # C compiler
 #
 #CC=gcc
@@ -76,7 +68,7 @@ BLAS_NAME=
 # PAPI
 
 # If PAPI is installed, the following information can be optained from
-# papi_avail.
+# papi_avail. It is also gathered by gathercfg.sh.
 
 # Number of counters the CPU supports simmultaneously
 # 0: disable PAPI support entirely.
@@ -125,7 +117,17 @@ BLAS_NAME=
 
 # CPU INFORMATION
 
-# These are required to e.g. compute performance and efficiencies in the GUI
+# Number of cores
+#
+#NCORES=1
+
+# Number of threads per core
+#
+#THREADS_PER_CORE=1
+
+# These are required to e.g. compute performance and efficiencies in the GUI.
+# Appart from DFLOPS_PER_CYCLE, these can be determined by:
+#. ./gathercfg.sh
 
 # Full CPU model name [GUI]
 # e.g. from /proc/cpuinfo
