--- a/Sampler/cfgs/examples/template.cfg
+++ b/Sampler/cfgs/examples/template.cfg
@@ -55,8 +55,7 @@ BLAS_NAME=
 # Will be processed by C preprocessor.
 # Should only contain function declarations.
 #
-#KERNEL_HEADERS="../data/headers/blas.h ../data/headers/lapack.h"
-
+#$KERNEL_HEADERS=`echo ../resources/headers/{blas_,lapack_,utility}.h`
 
 # OPENMP
 
