--- a/Sampler/cfgs/examples/template.cfg
+++ b/Sampler/cfgs/examples/template.cfg
@@ -4,8 +4,7 @@
 
 # Environment variables are used if available but overwritten by the variables
 # in this file.
-# Variables commented out have default values, which are used if they are set
-# neither here nor in the environment.
+# If the variable is not set, the default commented value in this file is used.
 # items that are only relevant for the GUI are marked [GUI]
 
 
@@ -22,7 +21,7 @@ BLAS_NAME=
 # Name of the Sampler
 # (default: basename of the cfg file)
 #
-#NAME=`basename $1 .cfg`
+#NAME=`basename $1`.cfg
 
 # C compiler
 #
@@ -55,7 +54,7 @@ BLAS_NAME=
 # Will be processed by C preprocessor.
 # Should only contain function declarations.
 #
-#$KERNEL_HEADERS=`echo ../resources/headers/{blas_,lapack_,utility}.h`
+#KERNEL_HEADERS=`echo ../resources/headers/{blas_,lapack_,utility}.h`
 
 # OPENMP
 
@@ -126,16 +125,16 @@ BLAS_NAME=
 
 # These are required to e.g. compute performance and efficiencies in the GUI.
 # Appart from DFLOPS_PER_CYCLE, these can be determined by:
-#. ./gathercfg.sh
+. ./gathercfg.sh
 
 # Full CPU model name [GUI]
 # e.g. from /proc/cpuinfo
 #
-CPU_MODEL=
+#CPU_MODEL=
 
 # CPU Frequency in Hz [GUI]
 #
-FREQUENCY_HZ=
+#FREQUENCY_HZ=
 
 # Maximum number of double preicion floating point operations issued per cycle
 # [GUI]
