build system error detection

--- a/Sampler/cfgs/examples/Mac_Accelerate.cfg
+++ b/Sampler/cfgs/examples/Mac_Accelerate.cfg
@@ -9,9 +9,8 @@ BACKEND_PREFIX="VECLIB_MAXIMUM_THREADS={nt}"
 
 . ./gathercfg.sh > /dev/null
 
-
 #DFLOPS_PER_CYCLE=4  # Core/Penryn, Nehalem/Westmere
 DFLOPS_PER_CYCLE=8  # Sandy Bridge/Ivy Bridge
 #DFLOPS_PER_CYCLE=16  # Haswell/Broadwell
 
-# vim: set ft=sh
+# vim: ft=sh
