generalized BLAS/LAPACK headers

--- a/Sampler/cfgs/examples/template.cfg
+++ b/Sampler/cfgs/examples/template.cfg
@@ -43,18 +43,30 @@ BLAS_NAME=
 #
 #LINK_FLAGS=
 
-# Include flags (e.g. "-I${PAPI_ROOT}/include)
+# Include flags (e.g. "-I${PAPI_ROOT}/include")
 #
 #INCLUDE_FLAGS=
 
 
-# KERNELS
+# KERNELS and formats
 
 # Header files for kernels
 # Will be processed by C preprocessor.
 # Should only contain function declarations.
 #
-#KERNEL_HEADERS=`echo ../resources/headers/{blas_,lapack_,utility}.h`
+#KERNEL_HEADERS=`echo ../resources/headers/{blas,lapack,utility}.h`
+
+# Whether symbol names for BLAS/LAPACK have a trailing underscore.
+#
+#BLAS_UNDERSCORE=1
+#LAPACK_UNDERSCORE=1
+
+# Set to 1 when complex BLAS/LAPACK functions return their results in their
+# first (additional) argument.  This is the case for MKL and Accelerate.
+#
+#BLAS_COMPLEX_FUNCTIONS_AS_ROUTINES=0
+#LAPACK_COMPLEX_FUNCTIONS_AS_ROUTINES=0
+
 
 # OPENMP
 
