added linux example cfg, warnings

--- a/Sampler/cfgs/examples/Mac_Accelerate.cfg
+++ b/Sampler/cfgs/examples/Mac_Accelerate.cfg
@@ -8,5 +8,6 @@ BACKEND_PREFIX="VECLIB_MAXIMUM_THREADS={nt}"
 #DFLOPS_PER_CYCLE=4  # Core/Penryn, Nehalem/Westmere
 #jDFLOPS_PER_CYCLE=8  # Sandy Bridge/Ivy Bridge
 DFLOPS_PER_CYCLE=16  # Haswell/Broadwell
+echo "!! Assuming 16 double FLOPs/cycle (Haswell) !!"
 
 # vim: ft=sh
