introduced LAPACK version separation

--- a/Sampler/cfgs/examples/template.cfg
+++ b/Sampler/cfgs/examples/template.cfg
@@ -48,6 +48,11 @@
 #
 #KERNEL_HEADERS=`echo ../resources/headers/{blas,lapack,utility}.h`
 
+# LAPACK version
+# Used to exclude newer routines when linking to older LAPACK versions.
+#
+#LAPACK_VERSION=361
+
 # Whether symbol names for BLAS/LAPACK have a trailing underscore.
 #
 #BLAS_UNDERSCORE=1
