added LAPACK version to Accelerate setup

--- a/Sampler/cfgs/examples/Mac_Accelerate.cfg
+++ b/Sampler/cfgs/examples/Mac_Accelerate.cfg
@@ -2,6 +2,7 @@
 
 LINK_FLAGS="-framework Accelerate"
 BACKEND_PREFIX="VECLIB_MAXIMUM_THREADS={nt}"
+LAPACK_VERSION=350
 
 . ./gathercfg.sh > /dev/null
 
