jureca config file updated changes: - fixed the usage of MKL_NUM_THREADS for multithreaded mkl - added the Backend option to disable Turbo Boost - added a comment regarding the required modules

--- a/Sampler/cfgs/examples/jureca.cfg
+++ b/Sampler/cfgs/examples/jureca.cfg
@@ -1,5 +1,16 @@
 #!/bin/bash
 
+# To use ELAPS on jureca, please make sure to
+# load the following modules (as of Okt 2016)
+# 
+# module load Intel
+# module load intel-para
+# module load PAPI
+# module load Python/2.7.11
+# module load PyQt/.4.11.4-Python-2.7.11
+# module load SciPy-Stack/2016a-Python-2.7.11
+
+
 CC=icc
 CFLAGS="-qopenmp -O3 -axCORE-AVX2,AVX,SSE4.2,SSE4.1"
 CXX=icpc
@@ -14,15 +25,14 @@ BACKEND_HEADER="
 #SBATCH --ntasks=1
 #SBATCH --time=00:30:00
 #SBATCH --partition=devel
+#SBATCH --disable-turbomode
 
-export OMP_NUM_THREADS={nt}
-export MKL_NUM_THREADS={nt}
-export KMP_AFFINITY=compact,1
+export KMP_AFFINITY='granularity=core,compact,1'
 
 module load Intel
 module load intel-para
 module load PAPI"
-BACKEND_PREFIX="srun --cpu_bind=none "
+BACKEND_PREFIX="MKL_NUM_THREADS={nt} srun --cpu_bind=none "
 BACKEND="slurm"
 
 DFLOPS_PER_CYCLE=16
