expanded example cfg files

--- a/Sampler/cfgs/examples/juqueen.cfg
+++ b/Sampler/cfgs/examples/juqueen.cfg
@@ -1,15 +1,24 @@
 #!/bin/bash
 
+# See template.cfg for details on the relevant variables
+
 CC="bgxlc"
 CFLAGS="-qsmp=omp -qthreaded -O2 -qarch=qp -qtune=qp"
 CXX="bgxlc++"
 CXXFLAGS="-qsmp=omp -qthreaded -O2 -qarch=qp -qtune=qp"
+INCLUDE_FLAGS="-I${PAPI_ROOT}/include"
 LINK_FLAGS="-Wl,-allow-multiple-definition \
 -L/bgsys/local/lib -L${LAPACK_LIB} -lesslsmpbg -llapack -lesslsmpbg \
 -L${PAPI_ROOT}/lib -lpapi \
 -L/opt/ibmcmp/xlsmp/3.1/bglib64 -lxlsmp \
 -L/opt/ibmcmp/xlf/bg/14.1/bglib64 -lxlf90_r -lxl -lxlfmath -lxlopt -lm -lrt -ldl"
-INCLUDE_FLAGS="-I${PAPI_ROOT}/include"
+
+#KERNEL_HEADERS=`echo ../resources/headers/{blas,lapack,utility}.h`
+#LAPACK_VERSION=361
+#BLAS_UNDERSCORE=1
+#LAPACK_UNDERSCORE=1
+#BLAS_COMPLEX_FUNCTIONS_AS_ROUTINES=0
+#LAPACK_COMPLEX_FUNCTIONS_AS_ROUTINES=0
 
 OPENMP=0
 
@@ -26,11 +35,14 @@ BACKEND_HEADER="
 #@ queue
 "
 BACKEND_PREFIX="OMP_NUM_THREADS=\"parths={nt}\" runjob --np 1 : "
+#BACKEND_SUFFIX=
+#BACKEND_FOOTER=
 
 NCORES=16
 THREADS_PER_CORE=4
 CPU_MODEL="PowerPC A2"
 FREQUENCY_HZ=1600000000
 DFLOPS_PER_CYCLE=8
+#SFLOPS_PER_CYCLE=$((2 * DFLOPS_PER_CYCLE))
 
-# vim: set ft=sh:
+# vim: ft=sh
