--- a/Sampler/cfgs/examples/jureca.cfg
+++ b/Sampler/cfgs/examples/jureca.cfg
@@ -1,5 +1,7 @@
 #!/bin/bash
 
+# See template.cfg for details on the relevant variables
+
 # To use ELAPS on jureca, please make sure to
 # load the following modules (as of Okt 2016)
 # 
@@ -10,16 +12,27 @@
 # module load PyQt/.4.11.4-Python-2.7.11
 # module load SciPy-Stack/2016a-Python-2.7.11
 
-
 CC=icc
 CFLAGS="-qopenmp -O3 -axCORE-AVX2,AVX,SSE4.2,SSE4.1"
 CXX=icpc
 CXXFLAGS="-qopenmp -O3 -axCORE-AVX2,AVX,SSE4.2,SSE4.1"
-BLAS_NAME=MKL
-LINK_FLAGS="-qopenmp -L${MKLROOT}/lib/intel64 -lmkl_intel_lp64 -lmkl_core -lmkl_intel_thread -mkl -lpthread -lm -L${PAPI_ROOT}/lib -lpapi"
 INCLUDE_FLAGS="-I${MKLROOT}/include -I${PAPI_ROOT}/include"
-. ./gathercfg.sh
-FREQUENCY_HZ="2500000000.000"
+LINK_FLAGS="-qopenmp -L${MKLROOT}/lib/intel64 -lmkl_intel_lp64 -lmkl_core \
+-lmkl_intel_thread -mkl -lpthread -lm -L${PAPI_ROOT}/lib -lpapi"
+
+#KERNEL_HEADERS=`echo ../resources/headers/{blas,lapack,utility}.h`
+#LAPACK_VERSION=361
+#BLAS_UNDERSCORE=1
+#LAPACK_UNDERSCORE=1
+#BLAS_COMPLEX_FUNCTIONS_AS_ROUTINES=0
+#LAPACK_COMPLEX_FUNCTIONS_AS_ROUTINES=0
+
+#OPENMP=1
+
+#PAPI_COUNTERS_MAX=0
+#PAPI_COUNTERS_AVAIL=
+
+BACKEND="slurm"
 BACKEND_HEADER="
 #SBATCH --nodes=1
 #SBATCH --ntasks=1
@@ -33,8 +46,17 @@ module load Intel
 module load intel-para
 module load PAPI"
 BACKEND_PREFIX="MKL_NUM_THREADS={nt} srun --cpu_bind=none "
-BACKEND="slurm"
+#BACKEND_SUFFIX=
+#BACKEND_FOOTER=
 
+#NCORES=1
+#THREADS_PER_CORE=1
+#CPU_MODEL=
+#FREQUENCY_HZ=
 DFLOPS_PER_CYCLE=16
+#SFLOPS_PER_CYCLE=$((2 * DFLOPS_PER_CYCLE))
+
+. ./gathercfg.sh
+FREQUENCY_HZ="2500000000.000"
 
 # vim: set ft=sh:
